welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:4: error: not a legal formal parameter
 13<b && b=>19 || 12<b && b<=19 && 13<a && a=>19) 
      ^loneTeen:4: error: not a legal formal parameter
 13<b && b=>19 || 12<b && b<=19 && 13<a && a=>19) 
               ^